<resources>
    <string name="app_name">Antikvárium.hu Kft.</string>
    <string name="icon_phone">&#xf098;</string> <!--&#xf098;-->
    <string name="icon_city">&#xf015;</string> <!--&#xf015;-->
    <string name="icon_adr">&#xf08d;</string> <!--&#xf08d;-->
    <string name="icon_zip">&#xf292;</string> <!--&#xf08d;-->
    <string name="icon_web">&#xf0ac;</string>

    <string name="tel">+3645524229</string>
    <string name="city">Szeged</string>
    <string name="street">Makai út 29.</string>
    <string name="zip">6771</string>
    <string name="web">www.antikvarium.hu</string>
    <string name="hedline">Antikvárium.hu</string>
</resources>